# takehome_api

./: README.md  app.py  pyproject.toml  scripts.py
instance/: app.db  config.py
takehome_api/src/: external.py  main.py
takehome_api/src/handlers/: add_provider.py  book_appointment.py  clear_db.py  list_appointments.py  list_providers.py
takehome_api/src/models/: Appointment.py  Patient.py  Provider.py  associations.py
tests/: test_api.py
